Java 9 compatibility. (#8)
Java EE features:

* Add --add-modules java.xml.bind; also requires Ant 1.9.4 or later